--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,9 @@ exclude:
   - "package.json"
   - "params.json"
   - "Readme.md"
+
+title: Notepad2-mod
+description: Notepad2-mod, a Notepad2 fork, a fast and light-weight Notepad-like text editor with syntax highlighting
+google_analytics: UA-34374820-1
+show_downloads: true
+theme: jekyll-theme-tactile
